[package]
name = "actix-web-4-validator"
version = "2.2.0"
authors = [
    "Belousow Makc <lib.bmw@gmail.com>",
    "Andrey Ermilov <andrerm@ya.ru>",
    "Kolomatskiy Artem <kolomatskiy@bk.ru>",
    "Piyush मिश्र: <piyush.raj.kit@gmail.com>",
]
edition = "2018"
description = "Validation mechanism for actix-web"
keywords = [
    "actix-web",
    "serialization",
    "querystring",
    "validator",
    "validation",
]
categories = ["encoding", "web-programming"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/actix-web-4-validator"
documentation = "https://docs.rs/actix-web-4-validator/"

[dependencies]
actix-web = { version = "4.0.0-rc.3", default-features = false }
# actix-http = { version = "2" }
# derive_more = "0.99"
validator = { version = "0.14" }
serde = "1"
serde_urlencoded = "0.7"
serde_json = "1"
serde_qs = { version = "0.8", features = ["actix"] }
log = "0.4"
futures = "0.3"
mime = "0.3"
bytes = "1.1"
actix-router = "0.5.0-rc.3"
futures-util = "0.3"

[dev-dependencies]
validator = { version = "0.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
actix-service = "2"
actix-rt = "2"
