[package]
authors = [
  "Belousow Makc <lib.bmw@gmail.com>",
  "Andrey Ermilov <andrerm@ya.ru>",
  "Kolomatskiy Artem <kolomatskiy@bk.ru>",
  "Piyush मिश्र: <piyush.raj.kit@gmail.com>",
]
categories = ["encoding", "web-programming"]
description = "Validation mechanism for actix-web"
documentation = "https://docs.rs/actix-web-4-validator/"
edition = "2018"
keywords = [
  "actix-web",
  "serialization",
  "querystring",
  "validator",
  "validation",
]
license = "MIT"
name = "actix-web-4-validator"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/actix-web-4-validator"
version = "3.2.0"

[dependencies]
actix-web = {version = "4.0.1", default-features = false}
# actix-http = { version = "2" }
# derive_more = "0.99"
actix-router = "0.5.0-rc.3"
bytes = "1.1"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
mime = "0.3"
serde = "1"
serde_json = "1"
serde_qs = {version = "0.8", features = ["actix"]}
serde_urlencoded = "0.7"
validator = {version = "0.15"}

[dev-dependencies]
actix-rt = "2"
actix-service = "2"
serde = {version = "1", features = ["derive"]}
validator = {version = "0.15", features = ["derive"]}
